Tabla de pronósticos: Se leen los usuarios con sus relaciones y se eliminan los componentes para leer Posición x Jornada y Posición General

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-APP_NAME=Laravel
+APP_NAME="Quiniela NG"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:5OX7QO4U67mbRaa09fRvPYagLRtWakVV9XyUoF9vOOM=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE="America/Chihuahua"
+# APP_URL=http://localhost
+APP_URL=http://quinielang.test
 
-APP_LOCALE=en
+APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -22,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=quinielanfl
+DB_DATABASE=quinielang
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -62,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+ROLE_PARTICIPANT='Participante'
+PRINT_ACUMULATED_BY_ROUND=false
+IMG_TO_YET_PICK_GAME=reloj.jpg
+
