Agregar variable de entorno

--- a/.env.example
+++ b/.env.example
@@ -66,4 +66,5 @@ VITE_APP_NAME="${APP_NAME}"
 ROLE_PARTICIPANT='Participante'
 PRINT_ACUMULATED_BY_ROUND=false
 IMG_TO_YET_PICK_GAME=reloj.jpg
+PRINT_ICON_HIT_HAME_TABLE_PICKS=false
 
