Tabla general de posiciones

--- a/.env.example
+++ b/.env.example
@@ -67,4 +67,6 @@ ROLE_PARTICIPANT='Participante'
 PRINT_ACUMULATED_BY_ROUND=false
 IMG_TO_YET_PICK_GAME=reloj.jpg
 PRINT_ICON_HIT_HAME_TABLE_PICKS=false
+SHOW_NAME_POSITION_BY_ROUND=false
+SHOW_NAME_GENERAL_POSITIONS=true
 
