Usuarios: Listado ordenados por "last_login" (desc) y Nombre (Asc)

--- a/.env.example
+++ b/.env.example
@@ -68,5 +68,8 @@ PRINT_ACUMULATED_BY_ROUND=false
 IMG_TO_YET_PICK_GAME=reloj.jpg
 PRINT_ICON_HIT_HAME_TABLE_PICKS=false
 SHOW_NAME_POSITION_BY_ROUND=false
-SHOW_NAME_GENERAL_POSITIONS=true
+SHOW_NAME_GENERAL_POSITIONS=false
+MAX_ROUND_TO_PICKS=19
+FIELD_TO_ORDER_USERS=last_login
+ORDER_TO_SHOW_USERS=desc
 
