Cambio del reloj de .jpg a png

--- a/.env.example
+++ b/.env.example
@@ -65,7 +65,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 ROLE_PARTICIPANT='Participante'
 PRINT_ACUMULATED_BY_ROUND=false
-IMG_TO_YET_PICK_GAME=reloj.jpg
+IMG_TO_YET_PICK_GAME=reloj.png
 PRINT_ICON_HIT_HAME_TABLE_PICKS=false
 SHOW_NAME_POSITION_BY_ROUND=false
 SHOW_NAME_GENERAL_POSITIONS=false
