--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Quiniela NG"
 APP_ENV=local
-APP_KEY=base64:5OX7QO4U67mbRaa09fRvPYagLRtWakVV9XyUoF9vOOM=
+APP_KEY=base64:EoV/bvojRvIJ3Bl1gPxVNxGoy1XMDLsz6j7PCBED834=
 APP_DEBUG=true
 APP_TIMEZONE="America/Chihuahua"
 # APP_URL=http://localhost
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db5018415658.hosting-data.io
 DB_PORT=3306
-DB_DATABASE=quinielang
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=dbs14645061
+DB_USERNAME=dbu626818
+DB_PASSWORD=MxpxtxlxNFL2025%1+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
